--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/demo_app
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/demo_app
       - REDIS_HOST=host.docker.internal
       - REDIS_POST=6379
       - PORT=3001
