--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,15 +16,15 @@ spec:
         app: nextjs-app
     spec:
       containers:
-        - name: frontend
-          image: imranhasan871/nextjs-frontend:latest
-          ports:
-            - containerPort: 3000
-          env:
-            - name: PORT
-              value: "3000"
-            - name: BACKEND_URL
-              value: http://nextjs-backend.default.svc.cluster.local:3001
+        # - name: frontend
+        #   image: imranhasan871/nextjs-frontend:latest
+        #   ports:
+        #     - containerPort: 3000
+        #   env:
+        #     - name: PORT
+        #       value: "3000"
+        #     - name:
+        #       value: http://nextjs-backend.default.svc.cluster.local:3001
         - name: backend
           image: imranhasan871/nextjs-backend:latest
           ports:
@@ -38,21 +38,21 @@ spec:
               value: redis.default.svc.cluster.local
             - name: REDIS_PORT
               value: "6379"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend
-  namespace: default
-spec:
-  selector:
-    app: nextjs-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
-  type: ClusterIP
----
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: frontend
+#   namespace: default
+# spec:
+#   selector:
+#     app: nextjs-app
+#   ports:
+#     - protocol: TCP
+#       port: 80
+#       targetPort: 3000
+#   type: ClusterIP
+# ---
 
 ---
 # Adding Ingress resource
@@ -75,7 +75,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend
+                name: backend
                 port:
                   number: 80
 ---
@@ -89,7 +89,7 @@ spec:
     app: nextjs-app
   ports:
     - protocol: TCP
-      port: 3001
+      port: 80
       targetPort: 3001
 ---
 apiVersion: apps/v1
