refactor: update environment variables and add backend server implementation with user routes

--- a/backend/.env.local
+++ b/backend/.env.local
@@ -2,7 +2,7 @@
 PORT=3001
 
 # Database Configuration
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/demo_app
+DATABASE_URL=postgresql://metabase:mysecretpassword@170.187.228.254:5432/demo-db
 
 # Redis Configuration
 REDIS_HOST=localhost
