--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -55,27 +55,31 @@ spec:
 # ---
 
 ---
-# Adding Ingress resource
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nextjs-ingress
   namespace: default
   annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: "nginx"
-
 spec:
   rules:
-    - host: test.stacklearner.org # Replace with your domain
+    - host: test.stacklearner.org
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: backend
                 port:
                   number: 80
+
+  tls:
+    - hosts:
+        - test.stacklearner.org
+      secretName: test-stacklearner-org-tls
 ---
 apiVersion: v1
 kind: Service
@@ -132,8 +136,7 @@ spec:
     - protocol: TCP
       port: 5432
       targetPort: 5432
-  type: NodePort
-  nodePort: 30007
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
